Add trained model for Streamlit

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,11 @@ __pycache__/
 data/raw/
 
 # model artifacts
+# model artifacts
 models/
+!models/*.joblib
+!models/*.pkl
+!models/*.json
 
 # reports (generated)
 reports/figures/
